Editorial-Article page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: review
 title: Macalister Mansion
 ---
 
@@ -87,40 +87,27 @@ title: Macalister Mansion
   <div class='"grid"'>
     <div class="col-6">
       <h3>In a Nutshell...</h3>
-      <i class="fa fa-circle-thin" aria-hidden="true"></i>   Bullet point here<br>
-      <i class="fa fa-circle-thin" aria-hidden="true"></i>   Bullet point here<br>
-      <i class="fa fa-circle-thin" aria-hidden="true"></i>   Bullet point here<br>
-      <i class="fa fa-circle-thin" aria-hidden="true"></i>   Bullet point here<br>
-      <i class="fa fa-circle-thin" aria-hidden="true"></i>   Bullet point here<br>
+      <ul>
+        <li>Great for families</li>
+        <li>Blah blah blah blah blah blah blah blah blah blah</li>
+        <li>Bullet point here</li>
+        <li>Bullet point here</li>
+        <li>Bullet point here</li>
+      </ul>
     </div>
     <div class="col-6">
       <h3>Macalister Mansion is Best For...</h3>
-      <i class="fa fa-circle-thin" aria-hidden="true"></i>   Bullet point here<br>
-      <i class="fa fa-circle-thin" aria-hidden="true"></i>   Bullet point here<br>
-      <i class="fa fa-circle-thin" aria-hidden="true"></i>   Bullet point here<br>
-      <i class="fa fa-circle-thin" aria-hidden="true"></i>   Bullet point here<br>
-      <i class="fa fa-circle-thin" aria-hidden="true"></i>   Bullet point here<br>
+      <ul>
+        <li>Bullet point here</li>
+        <li>Bullet point here</li>
+        <li>Bullet point here</li>
+        <li>Bullet point here</li>
+        <li>Bullet point here</li>
+      </ul>
     </div>
   </div>
 </section>
 <!-- - - - - - - - - - - - - - -End of Summary section - - - - - - -  -->
 <!--  - - - - - - - - - - - - - -Form for Comments SECTION - - -  - - - - - - - - - --->
-<section class="comments">
-  <div class="grid">
-    <div class="col-4">
-    </div>
-    <div class="col-4">
-      <form>
-        <h2>Penny for your Thoughts?</h2>
-        <!-- NEED TO ADD FORM PLUGIN -->
-        <input type="textarea" comment="" value="" placeholder="Comment"></input><br>
-        <input type="text" name="" value="" placeholder="Name"></input><br>
-        <input type="text" email="" value="" placeholder="Email"></input><br>
-        <input type="button" value="Submit">
-      </form>
-    </div>
-    <div class="col-4">
-    </div>
-  </section>
   <!-- - - - - - - - - - - - - - -End of Form section - - - - - - -  -->
   <!--  - - - - - - - - - - - - - -Footer- - -  - - - - - - - - - -->
