Photo stories page

--- a/photos-menu.html
+++ b/photos-menu.html
@@ -2,16 +2,91 @@
 layout: default
 header-image: /images/IMG_3599.jpg
 gallery:
-  - path: /images/Luberon/IMG_2508.jpg
-  - path: /images/Luberon/DSC_0419.jpg
-  - path: /images/Luberon/IMG_2423.jpg
-  - path: /images/Luberon/IMG_2436.jpg
-  - path: /images/Luberon/DSC_0439.jpg
-  - path: /images/Luberon/IMG_2468.jpg
-  - path: /images/Luberon/IMG_2474.jpg
-  - path: /images/Luberon/IMG_2412.jpg
-  - path: /images/Luberon/IMG_2511.jpg
-  - path: /images/Luberon/IMG_2536.jpg
-  - path: /images/Luberon/IMG_2559.jpg
-  - path: /images/Luberon/IMG_2586.jpg
+- path: /images/Luberon/IMG_2508.jpg
+- path: /images/Luberon/DSC_0419.jpg
+- path: /images/Luberon/IMG_2423.jpg
+- path: /images/Luberon/IMG_2436.jpg
+- path: /images/Luberon/DSC_0439.jpg
+- path: /images/Luberon/IMG_2468.jpg
+- path: /images/Luberon/IMG_2474.jpg
+- path: /images/Malacca/DSC_0911.jpg
+- path: /images/Malacca/DSC_0912.jpg
+- path: /images/Malacca/DSC_0931.jpg
+- path: /images/Malacca/DSC_0933.jpg
+- path: /images/Malacca/DSC_0938.jpg
+- path: /images/Malacca/DSC_0941.jpg
 ---
+<section>
+  <h1>Photo Stories</h1>
+</section>
+<section class="main-content gallery">
+  <div class="grid-section-one">
+    <div class="col-6 portrait photo">
+      <img src="/images/Malacca/DSC_0938.jpg"/>
+    </div>
+    <div class="col-6 landscape photo">
+      <img src="/images/Malacca/DSC_0933.jpg"/>
+      <div class="column-text column-text-bottom">
+        <h3>That Time I Went to Malacca</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="main-content gallery">
+  <div class="grid-section-two">
+    <div class="col-6">
+      <div class="column-text">
+        <h3>In the Lavender Fields</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        </p>
+      </div>
+      <div class="col-6 landscape photo">
+        <img src="/images/Luberon/IMG_2436.jpg"/>
+    </div>
+    </div>
+    <div class="col-6 portrait photo">
+      <img src="/images/Luberon/DSC_0439.jpg"/>
+    </div>
+</div>
+</section>
+
+</section>
+<section class="main-content gallery">
+  <div class="grid-section-three">
+    <div class="col-6 portrait photo">
+      <img src="/images/IMG_4550.jpg"/>
+    </div>
+    <div class="col-6 landscape photo">
+      <img src="/images/IMG_4544.jpg"/>
+      <div class="column-text column-text-bottom">
+        <h3>Beautiful Budapest</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="main-content gallery">
+  <div class="grid-section-two">
+    <div class="col-6">
+      <div class="column-text">
+        <h3>Sardinia Stole my Heart</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+        </p>
+      </div>
+      <div class="col-6 landscape photo">
+        <img src="/images/DSC_0848.jpg"/>
+    </div>
+    </div>
+    <div class="col-6 portrait photo">
+      <img src="/images/IMG_4122.jpg"/>
+    </div>
+</div>
+</section>
+
+<section>
+</section>
