Created sardinia and budapest article pages

--- a/photos-menu.html
+++ b/photos-menu.html
@@ -27,9 +27,12 @@ gallery:
     <div class="col-6 landscape photo">
       <img src="/images/Malacca/DSC_0933.jpg"/>
       <div class="column-text column-text-bottom">
-        <h3>That Time I Went to Malacca</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        <h2>That Time I Went to Malacca</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderi
         </p>
+        <div class="photo-link">
+        <a href="index.html/photo-story.html">See all photos here</a>
+        </div>
       </div>
     </div>
   </div>
@@ -40,8 +43,11 @@ gallery:
     <div class="col-6">
       <div class="column-text">
         <h3>In the Lavender Fields</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
         </p>
+        <div class="photo-link">
+        <a href="/photo-story.html">See all photos here</a>
+        </div>
       </div>
       <div class="col-6 landscape photo">
         <img src="/images/Luberon/IMG_2436.jpg"/>
@@ -55,16 +61,19 @@ gallery:
 
 </section>
 <section class="main-content gallery">
-  <div class="grid-section-three">
+  <div class="grid-section-one">
     <div class="col-6 portrait photo">
-      <img src="/images/IMG_4550.jpg"/>
+      <img src="/images/budapest/IMG_4550.jpg"/>
     </div>
     <div class="col-6 landscape photo">
-      <img src="/images/IMG_4544.jpg"/>
+      <img src="/images/budapest/IMG_4544.jpg"/>
       <div class="column-text column-text-bottom">
         <h3>Beautiful Budapest</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
         </p>
+        <div class="photo-link">
+        <a href="index.html/photo-story.html">See all photos here</a>
+        </div>
       </div>
     </div>
   </div>
@@ -75,15 +84,17 @@ gallery:
     <div class="col-6">
       <div class="column-text">
         <h3>Sardinia Stole my Heart</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-        </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequ
+        <div class="photo-link">
+        <a href="index.html/photo-story.html">See all photos here</a>
+        </div>
       </div>
       <div class="col-6 landscape photo">
-        <img src="/images/DSC_0848.jpg"/>
+        <img src="/images/Sardinia/DSC_0848.jpg"/>
     </div>
     </div>
     <div class="col-6 portrait photo">
-      <img src="/images/IMG_4122.jpg"/>
+      <img src="/images/Sardinia/IMG_4122.jpg"/>
     </div>
 </div>
 </section>
