--- a/macalister-mansion.html
+++ b/macalister-mansion.html
@@ -1,4 +1,112 @@
 ---
 layout: review
-header-image: /images/Reviews/Macalister_mansion/Macalister_banner_edit.jpg
+header-image: /images/Reviews/Macalister_mansion/Macalister_banner.jpg
 ---
+<section class="heading">
+  <h1>Macalister Mansion</h1>
+  <h2>First Impressions</h2>
+  <h3>
+    <span>What is it?</span>
+    Boutique Resort</h3>
+    <h3>
+      <span>Will set you back:</span>
+      From 8000 THB p/n
+    </h3>
+    <p>
+      Wow. Macalister Mansion is set back from the busy and historic Jalan Macalister (Macalister Road) and amongst an eclectic variety of new, high-rise apartments and old, local buildings. It is an absolutely gorgeous restored Colonial mansion, massive and pristine with an all-white exterior save for the blue scalloped entrance roof and tanned mansion tiles. The elegant U-shaped driveway takes you past the icy-hued, pastel pool with its inviting clear blue water and pool bar, and ensures that you arrive in style right outside the reception area where the hotel staff eagerly await your arrival.
+    </p>
+  </div>
+</section>
+<!-- - - - - - - - End First impressions Section- - - - - - - - - -->
+<!-- - - - - - - - Design Div- - - - - - - - - -->
+<section class="main-content">
+  <div class="grid">
+    <div class="col-6 column-text-review">
+      <h2>Design & Style</h2>
+      <p>As a member of the brilliant Design Hotels group, it goes without saying that Macalister Mansion is in a league of its own when it comes to design and style – we have quite simply never seen anything quite like it. Lovingly put together based on the theme of an old and immaculate English mansion, every space in the building exudes an unwavering dedication to unique and quirky design decisions. From the Living Room with its mish-mash of terracotta, green and white, to the dreamy, white</p>
+    </div>
+    <div class="col-6 column-image-review">
+      <img src="images/Reviews/Macalister_mansion/macalister_design.jpg"/>
+    </div>
+  </div>
+  <!-- - - - - - - - End Design Section- - - - - - - - - -->
+  <!-- - - - - - - - Comfort Section- - - - - - - - - -->
+  <div class="grid">
+    <div class="col-6 column-image-review">
+      <img src="images/Reviews/Macalister_mansion/macalister_comfort.jpg"/>
+    </div>
+    <div class="col-6 column-text-review">
+      <h2>Comfort</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </div>
+  </div>
+
+
+  <!-- - - - - - - - End Comfort Section- - - - - - - - - -->
+  <!-- - - - - - - - Service Section- - - - - - - - - -->
+  <div class="grid">
+    <div class="col-6 column-text-review">
+      <h2>Service & Amenities</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </div>
+    <div class="col-6 column-image-review">
+      <img src="images/Reviews/Macalister_mansion/Macalister_amenities.jpg"/>
+    </div>
+  </div>
+
+  <!-- - - - - - - - End Service Section- - - - - - - - - -->
+  <!-- - - - - - - - Dining Section- - - - - - - - - -->
+  <div class="grid">
+    <div class="col-6 column-image-review">
+      <img src="images/Reviews/Macalister_mansion/Macalister_dining.jpg"/>
+    </div>
+    <div class="col-6 column-text-review">
+      <h2>Dining</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </div>
+  </div>
+</div>
+</section>
+<section>
+  <h2>In the Neighbourhood</h2>
+  <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p>
+</section>
+<!-- - - - - - - - - - - - - - -End of Content section - - - - - - -  -->
+<!--  - - - - - - - - - - - - - -MAP SECTION - - -  - - - - - - - - - --->
+<section>
+  <map><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3971.9872595284714!2d100.31655231441601!3d5.41890499606985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x304ac3bae3172f19%3A0x750dc82735036443!2sMacalister+Mansion!5e0!3m2!1sen!2sau!4v1494297493909" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen>></iframe></map>
+</section>
+<!-- - - - - - - - - - - - - - -End of Map section - - - - - - -  -->
+<!--  - - - - - - - - - - - - - -Summary SECTION - - -  - - - - - - - - - --->
+<section class="summary">
+  <div class='"grid"'>
+    <div class="col-6">
+      <h3>In a Nutshell...</h3>
+      <ul>
+        <li>Great for families</li>
+        <li>Blah blah blah blah blah blah blah blah blah blah</li>
+        <li>Bullet point here</li>
+        <li>Bullet point here</li>
+        <li>Bullet point here</li>
+      </ul>
+    </div>
+    <div class="col-6">
+      <h3>Macalister Mansion is Best For...</h3>
+      <ul>
+        <li>Bullet point here</li>
+        <li>Bullet point here</li>
+        <li>Bullet point here</li>
+        <li>Bullet point here</li>
+        <li>Bullet point here</li>
+      </ul>
+    </div>
+  </div>
+</section>
+<!-- - - - - - - - - - - - - - -End of Summary section - - - - - - -  -->
+<!--  - - - - - - - - - - - - - -Form for Comments SECTION - - -  - - - - - - - - - --->
+  <!-- - - - - - - - - - - - - - -End of Form section - - - - - - -  -->
+  <!--  - - - - - - - - - - - - - -Footer- - -  - - - - - - - - - -->
