fixed link paths

--- a/photos-menu.html
+++ b/photos-menu.html
@@ -31,7 +31,7 @@ gallery:
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderi
         </p>
         <div class="photo-link">
-        <a href="index.html/photo-story.html">See all photos here</a>
+        <a href="/photo-stories/Luberon-photo-story.html">See all photos here</a>
         </div>
       </div>
     </div>
@@ -42,11 +42,11 @@ gallery:
   <div class="grid-section-two">
     <div class="col-6">
       <div class="column-text">
-        <h3>In the Lavender Fields</h3>
+        <h2>In the Lavender Fields</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
         </p>
         <div class="photo-link">
-        <a href="/photo-story.html">See all photos here</a>
+        <a href="/photo-stories/Luberon-photo-story.html">See all photos here</a>
         </div>
       </div>
       <div class="col-6 landscape photo">
@@ -68,7 +68,7 @@ gallery:
     <div class="col-6 landscape photo">
       <img src="/images/budapest/IMG_4544.jpg"/>
       <div class="column-text column-text-bottom">
-        <h3>Beautiful Budapest</h3>
+        <h2>Beautiful Budapest</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
         </p>
         <div class="photo-link">
@@ -83,7 +83,7 @@ gallery:
   <div class="grid-section-two">
     <div class="col-6">
       <div class="column-text">
-        <h3>Sardinia Stole my Heart</h3>
+        <h2>Sardinia Stole my Heart</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequ
         <div class="photo-link">
         <a href="index.html/photo-story.html">See all photos here</a>
